--- a/style.css
+++ b/style.css
@@ -1,54 +1,56 @@
-body {
-  margin-bottom: 0;
-  margin-top: 0;
-  align-items: center;
-  text-align: center;
-  box-shadow: 0px 0px 5px black;
-  color: white;
-  background-color: hsl(0, 0%, 12%);
-  padding-bottom: 20px;
-  padding-top: 30px;
-  width: 300px;
-  font-family: Inter;
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style-type: none;
+  box-sizing: border-box;
 }
-.all {
-  background-color: Grey;
-  padding-top: 20px;
-  padding-bottom: 30px;
-  border-radius: 8px;
+body {
+  background-color: hsl(0, 0%, 8%);
+  min-height: 100vh;
+  font-family: inter;
+  display: grid;
+
+  place-content: center;
+}
+.card {
+  background-color: hsl(0, 0%, 12%);
+  color: hsl(0, 0%, 100%);
+  padding: 2rem;
+  max-width: 400px;
+  margin: 1rem;
+  border-radius: 0.75rem;
+  text-align: center;
 }
 img {
-  width: 70px;
-  object-fit: cover;
-  border-radius: 30px;
+  margin-bottom: 0.5rem;
+  width: 75px;
+  border-radius: 50%;
 }
-.nom {
-  color: hsl(0, 0%, 100%);
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 8px;
+h1 {
+  font-size: 1.75rem;
 }
 .location {
   color: hsl(75, 94%, 57%);
-  font-size: 11px;
-  margin-top: 0px;
-  font-weight: 400;
+  margin: 0.5rem 0 1.5rem;
+  font-weight: 700;
 }
-.job {
-  font-size: 10px;
-  color: hsl(0, 0%, 100%);
+ul {
+  margin-top: 1.75rem;
 }
-.btn {
-  align-items: center;
+.card ul li:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+a {
+  display: block;
   background-color: hsl(0, 0%, 20%);
   color: hsl(0, 0%, 100%);
-  font-size: 11px;
+  padding: 1rem;
   font-weight: 600;
-  width: 250px;
-  height: 40px;
-  border-radius: 8px;
-  text-align: center;
+  border-radius: 0.5rem;
 }
-button {
-  margin-bottom: 8px;
+a:hover {
+  background-color: chocolate;
+  color: hsl(0, 0%, 8%);
 }
